examples/test/testpolicy18658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18658
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key18: value9
      key13: value46
      key17: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value24
      podSelector:
        matchLabels:
          key20: value1
          key38: value21
          key12: value25
